# pointpillars_pytorch_trt

./: README.md
pytorch/: README.md  setup.py
pytorch/pcdet/: config.py
pytorch/pcdet/datasets/: __init__.py  dataset.py
pytorch/pcdet/datasets/augmentor/: database_sampler.py
pytorch/pcdet/datasets/kitti/: kitti_dataset.py
pytorch/pcdet/datasets/processor/: data_processor.py
pytorch/pcdet/datasets/waymo/: waymo_dataset.py
pytorch/pcdet/models/: __init__.py
pytorch/pcdet/models/backbones_2d/: base_bev_backbone.py
pytorch/pcdet/models/backbones_3d/: __init__.py  pointnet2_backbone.py  spconv_backbone.py  spconv_unet.py
pytorch/pcdet/models/dense_heads/: __init__.py  anchor_head_multiscale.py  anchor_head_template.py  point_head_simple.py  point_head_template.py
pytorch/pcdet/models/detectors/: __init__.py  detector3d_template.py  point_rcnn.py  pointpillar.py
pytorch/pcdet/models/roi_heads/: partA2_head.py  pointrcnn_head.py  pvrcnn_head.py  roi_head_template.py
pytorch/pcdet/ops/dense/: ops.py  (+1 more)
pytorch/pcdet/utils/: box_coder_utils.py  common_utils.py  loss_utils.py
pytorch/tools/: export.py  pruning.py  test.py  train.py
pytorch/tools/eval_utils/: eval_utils.py
pytorch/tools/scripts/: kmeans.py  torch_to_tf.py
pytorch/tools/train_utils/: train_utils.py
trt/: README.md  README_TRT2021.md
trt/TensorRT7.2/: CMakeLists.txt  builtin_op_importers.cpp  cp.sh
trt/TensorRT7.2/plugin/: CMakeLists.txt  InferPlugin.cpp
trt/TensorRT7.2/samples/: CMakeSamplesTemplate.txt
trt/tiny-tensorrt7.2/: CMakeLists.txt  Int8EntropyCalibrator.h  PyTrt.cpp  Trt.cpp  Trt.h  cuda_tookit.cu  cuda_tookit.h  test.xml
trt/tiny-tensorrt7.2/cmake/: CUDA_utils.cmake
trt/tiny-tensorrt7.2/eval_tools/: eval_results.py
trt/tiny-tensorrt7.2/eval_tools/kitti_object_eval_python/: evaluate.py
trt/tiny-tensorrt7.2/eval_tools/val_infos/: 000001.pkl  000002.pkl  000004.pkl  000005.pkl  000006.pkl  000008.pkl  000015.pkl  000019.pkl  000020.pkl  000021.pkl  000023.pkl  000024.pkl  000025.pkl  000027.pkl  000028.pkl  000031.pkl  000033.pkl  000035.pkl  000037.pkl  000039.pkl  000040.pkl  000042.pkl  000047.pkl  000048.pkl  000050.pkl  000052.pkl  000053.pkl  000058.pkl  000059.pkl  000061.pkl  000062.pkl  000063.pkl  000065.pkl  000066.pkl  000076.pkl  000077.pkl  000078.pkl  000081.pkl  000089.pkl  000090.pkl  (+3729 more)
trt/tiny-tensorrt7.2/test/: .test.cpp.swp  test.cpp
(+68 files in other folders)
